// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commit-message pull request edited Posts failure status if PR title is not correct 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR title is not correct even when the first commit message is correct 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if PR with multiple commits has invalid tag prefix in the title: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the PR title has invalid tag prefix: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the PR title has invalid tag prefix: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the PR title has invalid tag prefix: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the PR title has invalid tag prefix: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the PR title has invalid tag prefix: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the PR title has invalid tag prefix: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the PR title has invalid tag prefix: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the PR title has invalid tag prefix: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the PR title has invalid tag prefix: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the PR title has invalid tag prefix: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the PR title has invalid tag prefix: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if the PR title is longer than 72 chars and don't set labels 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if there are multiple commit messages and the title is invalid 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request edited Posts failure status if there are multiple commit messages and the title is too long 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR title is not correct 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR title is not correct even when the first commit message is correct 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the PR title has invalid tag prefix: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the PR title has invalid tag prefix: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the PR title has invalid tag prefix: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the PR title has invalid tag prefix: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the PR title has invalid tag prefix: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the PR title has invalid tag prefix: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the PR title has invalid tag prefix: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the PR title has invalid tag prefix: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the PR title has invalid tag prefix: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the PR title has invalid tag prefix: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the PR title has invalid tag prefix: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if the PR title is longer than 72 chars and don't set labels 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if there are multiple commit messages and the title is invalid 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request opened Posts failure status if there are multiple commit messages and the title is too long 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR title is not correct 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR title is not correct even when the first commit message is correct 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if PR with multiple commits has invalid tag prefix in the title: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the PR title has invalid tag prefix: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the PR title has invalid tag prefix: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the PR title has invalid tag prefix: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the PR title has invalid tag prefix: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the PR title has invalid tag prefix: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the PR title has invalid tag prefix: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the PR title has invalid tag prefix: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the PR title has invalid tag prefix: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the PR title has invalid tag prefix: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the PR title has invalid tag prefix: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the PR title has invalid tag prefix: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if the PR title is longer than 72 chars and don't set labels 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if there are multiple commit messages and the title is invalid 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request reopened Posts failure status if there are multiple commit messages and the title is too long 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR title is not correct 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR title is not correct even when the first commit message is correct 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if PR with multiple commits has invalid tag prefix in the title: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the PR title has invalid tag prefix: " New: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the PR title has invalid tag prefix: ": " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the PR title has invalid tag prefix: "Foo: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the PR title has invalid tag prefix: "New " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the PR title has invalid tag prefix: "New : " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the PR title has invalid tag prefix: "New:" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the PR title has invalid tag prefix: "Neww: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the PR title has invalid tag prefix: "Revert: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.
- The first letter of the tag should be in lowercase

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the PR title has invalid tag prefix: "feat" 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the PR title has invalid tag prefix: "nNew: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the PR title has invalid tag prefix: "new: " 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if the PR title is longer than 72 chars and don't set labels 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if there are multiple commit messages and the title is invalid 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The commit message tag wasn't recognized. Did you mean "docs", "fix", or "feat"?
- There should be a space following the initial tag and colon, for example 'feat: Message'.

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;

exports[`commit-message pull request synchronize Posts failure status if there are multiple commit messages and the title is too long 1`] = `
"Hi @user-a!, thanks for the Pull Request

The **pull request title** isn't properly formatted. We ask that you update the pull request title to match this format, as we use it to generate changelogs and automate releases.

- The length of the commit message must be less than or equal to 72

**To Fix:** You can fix this problem by clicking 'Edit' next to the pull request title at the top of this page.

Read more about contributing to ESLint [here](https://eslint.org/docs/developer-guide/contributing/)
"
`;
